Divido los archivos de estilos

--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
     <title>Freevlog</title>
 
-    <link rel="stylesheet" href="./estilos/mainStyles.css">
+    <link rel="stylesheet" href="./estilos/generalStyles.css">
+    <link rel="stylesheet" href="./estilos/cuerpoPagina.css">
+    <link rel="stylesheet" href="./estilos/headerPrincipal.css">
+    <link rel="stylesheet" href="./estilos/barraNavegacion.css">
+    <link rel="stylesheet" href="./estilos/footerPrincipal.css">
+
 </head>
 <body>
     <header id="encabezadoPagina" class="fondoAnimado">
