Commit para poder subir el proyecto a GitHub

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header id="encabezadoPagina" class="fondoAnimado">
-        <img src="" alt="titulo">
+        <img src="" alt="titulo" id="imgTitulo">
         <footer>
             <p>Pensar no esta contemplado en la ley.</p>
         </footer>
