Remodelo estilos basicos

--- a/main.html
+++ b/main.html
@@ -33,7 +33,9 @@
 
     <main class="cuerpoVlog">
         <nav id="navArticulos"></nav>
+        <div class="separator"></div>
         <section id="displayArticulos"></section>
+        <div class="separator"></div>
         <aside id="infoArticulos"></aside>
     </main>
 
