Cambio la palabra freeblog

--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="VLOG, CUBA, FREEVLOG">
+    <meta name="keywords" content="VLOG, CUBA, FREEBLOG">
     <meta name="description" content="Esto es un blog para compartir con las personas libres los pensamientos que invaden mi cabeza.">
 
-    <title>Freevlog</title>
+    <title>Freeblog</title>
 
     <link rel="stylesheet" href="./estilos/generalStyles.css">
     <link rel="stylesheet" href="./estilos/cuerpoPagina.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header id="encabezadoPagina" class="fondoAnimado">
-        <img src="" alt="titulo" id="imgTitulo">
+        <img src="" alt="Freeblog" id="imgTitulo">
         <footer>
             <p>Pensar no esta contemplado en la ley.</p>
         </footer>
@@ -26,7 +26,7 @@
     <nav id="barraNavegacion">
         <ul class="listaNavegacion">
             <li class="itemNavegacion">
-                <a href="#">Inicio</a>
+                <a href="#piePagina">Inicio</a>
             </li>
         </ul>
     </nav>
