Estilo #2 del header

--- a/main.html
+++ b/main.html
@@ -20,8 +20,7 @@
         <figure id="imgTitulo">
             <img src="" alt="Freeblog">
         </figure>
-        <figcaption class="fraseImg">Pensar no esta</figcaption>
-        <figcaption class="fraseImg">contemplado en la ley</figcaption>
+        <figcaption class="fraseImg">Pensar no esta contemplado en la ley</figcaption>
     </header>
 
     <nav id="barraNavegacion">
