Modifico la estructura del header

--- a/main.html
+++ b/main.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <header id="encabezadoPagina" class="fondoAnimado">
-        <img src="" alt="Freeblog" id="imgTitulo">
-        <footer>
-            <p>Pensar no esta contemplado en la ley.</p>
-        </footer>
+        <figure id="imgTitulo">
+            <img src="" alt="Freeblog">
+        </figure>
+        <figcaption class="fraseImg">Pensar no esta contemplado en la ley</figcaption>
     </header>
 
     <nav id="barraNavegacion">
