Cambio la estructua del header para no poner una img

--- a/main.html
+++ b/main.html
@@ -17,10 +17,8 @@
 </head>
 <body>
     <header id="encabezadoPagina" class="fondoAnimado">
-        <figure id="imgTitulo">
-            <img src="" alt="Freeblog">
-        </figure>
-        <figcaption class="fraseImg">Pensar no esta contemplado en la ley</figcaption>
+        <h1 id="imgTitulo">Freeblog</h1> <!-- Aqui deberia ir en un futuro una imagen o algo mas cool -->
+        <p class="fraseImg">Pensar no esta contemplado en la ley</p>
     </header>
 
     <nav id="barraNavegacion">
@@ -31,7 +29,7 @@
         </ul>
     </nav>
 
-    <main class="cuerpoVlog">
+    <main class="cuerpoBlog">
         <nav id="navArticulos"></nav>
         <div class="separator"></div>
         <section id="displayArticulos"></section>
