--- a/main.html
+++ b/main.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="./estilos/barraNavegacion.css">
     <link rel="stylesheet" href="./estilos/footerPrincipal.css">
 
+    <!-- Iconos de google -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Fuente -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header id="encabezadoPagina" class="fondoAnimado">
@@ -24,7 +32,10 @@
     <nav id="barraNavegacion">
         <ul class="listaNavegacion">
             <li class="itemNavegacion">
-                <a href="#piePagina">Inicio</a>
+                <a href="#">Inicio</a>
+            </li>
+            <li class="itemNavegacion">
+                <a href="#piePagina">Contacto</a>
             </li>
         </ul>
     </nav>
