Trabajando en el estilado del cuerpo del blog

--- a/main.html
+++ b/main.html
@@ -42,10 +42,30 @@
 
     <main class="cuerpoBlog">
         <nav id="navArticulos"></nav>
-        <div class="separator"></div>
+        <div class="separator" id="desaparecer"></div>
         <section id="displayArticulos"></section>
         <div class="separator"></div>
-        <aside id="infoArticulos"></aside>
+        <aside id="infoArticulos">
+            <h1 id="tituloArticulo">Artículo</h1>
+            <figure id="previsualizacionArticulo">
+                <img src="" alt="">
+            </figure>
+            <p id="reseñaArticulo"></p>
+            <table id="metadatosArticulo">
+                <tr>
+                    <td>Autor:</td>
+                    <td id="autorArticulo"></td>
+                </tr>
+                <tr>
+                    <td>Publicado:</td>
+                    <td id="fechaPublicacion"></td>
+                </tr>
+                <tr>
+                    <td>Lugar:</td>
+                    <td id="lugarArticulo"></td>
+                </tr>
+            </table>
+        </aside>
     </main>
 
     <footer id="piePagina"></footer>
