completo el aside

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="VLOG, CUBA, FREEBLOG">
+    <meta name="keywords" content="BLOG, CUBA, FREEBLOG">
     <meta name="description" content="Esto es un blog para compartir con las personas libres los pensamientos que invaden mi cabeza.">
 
     <title>Freeblog</title>
