--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <div class="backgroundText">
             <a name="tituloBarraNavegacion" href="#">Freeblog</a>
         </div>
-        <i class="material-icons menuNavegacion" onclick=toggleMenu>menu</i>
+        <i class="material-icons" id="menuNavegacion" onclick=toggleMenu>menu</i>
         <ul class="listaNavegacion">
             <li class="itemNavegacion">
                 <a href="#">Inicio</a>
@@ -45,7 +45,13 @@
     </nav>
 
     <main class="cuerpoBlog">
-        <nav id="navArticulos"></nav>
+        <nav id="navArticulos">
+            <details class="itemNavArticulos" id="navArticulosDetails">
+                <summary id="rootArticulos">Articulos</summary>
+                <!--* Aqui se pondran los articulos existentes en el servidor -->
+                <ul></ul>
+            </details>
+        </nav>
         <div class="separator desaparecer"></div>
         <section id="displayArticulos"></section>
         <div class="separator desaparecer"></div>
